# prett

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  compile.sh
scripts/: aliases.sh
src/: color.h  main.c  main.cpp  util.cpp  util.h
